crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/expected_function_in_using_directive/contract_member_function/generated/solc/0.8.13-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 4167] Error: Only file-level functions and library functions can be bound to a type in a "using" statement
   ╭─[input.sol:5:12]
   │
 5 │     using {f} for uint256;
   │            ┬  
   │            ╰── Error occurred here.
───╯
